# april-bot-docs

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  default.conf.template  mkdocs.yml  netlify.toml  nginx.conf  pyproject.toml  requirements.txt  static.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1.bug.md
.github/workflows/: ci.yml
docs/: Verbose-error.md  change-prefix.md  create-embed-message.md  formatting.md  index.md  invite.md  login.md  manifest.json  select-guild.md
docs/administration/: autorole.md  clear.md  custom-command.md  leaver.md  log.md  reactionrole.md  selfrole.md  welcome.md
docs/assets/css/: extra.css
docs/editor/: create-an-image.md  use-custom-background.md
docs/errors/: common.md  hierarchy.md
docs/protection/: automated-actions.md  message.md  standalone.md
docs/protection/filters/: caps-protection.md  emoji-protection.md  invite-protection.md  link-protection.md  mention-protection.md  paragraph-protection.md  spoiler-protection.md  symbol-protection.md  toxicity-protection.md
site/: 404.html  index.html  sitemap.xml
site/Verbose-error/: index.html
site/administration/autorole/: index.html
site/administration/clear/: index.html
site/administration/custom-command/: index.html
site/administration/leaver/: index.html
site/change-prefix/: index.html
site/create-embed-message/: index.html
site/formatting/: index.html
site/invite/: index.html
site/login/: index.html
site/search/: search_index.json
site/select-guild/: index.html
(+20 files in other folders)
